# mdchart

./: .gitignore  CONTRIBUTING.md  README.md  TASKS.md  ast.c  ast.h  example.html  example_output.md  generate_chart.py  lex.yy.c  makefile  md2chart  mdchart.l  mdchart.tab.c  mdchart.tab.h  mdchart.y  pyproject.toml  render.yaml  test_charts.md  test_charts_output.md
apps/api/: main.py
docs/: api.md  architecture.md  blog-integration.md  deploy-render.md  dsl.md
examples/: example.md  example_output.md
mdchart/: __main__.py  generate_chart.py  mdchart.sh  mdchart_wrapper.py
mdchart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/c/: ast.c  generate_chart.py  main.c
src/mdchart/: __init__.py  api.py  cli.py  dsl.py  engine.py  errors.py  renderer.py
tests/: conftest.py  test_api.py  test_dsl.py  test_engine.py
