[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdchart"
version = "1.0.0"
description = "Markdown chart playground engine with DSL parsing, matplotlib rendering, and FastAPI backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mdchart contributors" }]
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "matplotlib>=3.8.0,<4.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "uvicorn>=0.29.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
mdchart = "mdchart.cli:main"
mdchart-api = "mdchart.api:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
